package DesignPatterns.ObserverPattern.DisplayElement;

public interface DisplayElement {
    public void display();
}
