package DesignPatterns.ObserverPattern.Observer;

public interface Observer {
    public void update(float temperature, float humidity, float pressure);
}
